Add CoinMarketCap integration and caching support
- Updated project file to include UserSecretsId.
- Enhanced ServiceExtensions to add distributed caching and register new services.
- Modified Program.cs to configure symbols endpoints and middlewares.
- Updated appsettings.json with CoinMarketCap API settings and caching configuration.
- Created SymbolDto for representing cryptocurrency symbols.
- Added SymbolsEndpoints for retrieving symbols via API.
- Implemented CoinMarketCapService for API interaction and symbol fetching.
- Defined ICoinMarketCapService interface for service contract.
- Added SymbolsRepository to manage symbol data with caching.
- Created ISymbolsRepository interface for symbol retrieval and existence checks.

--- a/CryptoRates.UI.API/CryptoRates.UI.API.csproj
+++ b/CryptoRates.UI.API/CryptoRates.UI.API.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>2bae9933-f993-4655-9e4a-b1078c0196ec</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
