--- a/CryptoRates.UI.API/appsettings.json
+++ b/CryptoRates.UI.API/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CoinMarketCap": {
+    "BaseUrl": "https://pro-api.coinmarketcap.com",
+    "LatestListingsEndpoint": "/v1/cryptocurrency/listings/latest"
+  },
+  "Cache": {
+    "CryptoSymbolsKey": "crypto-symbols",
+    "ExpirationMinutes": 1440
+  }
 }
