Refactor symbol validation and caching mechanisms
- Updated `ISymbolsService` to replace `IsSymbolExistAsync` with `ValidateSymbolsAsync` for validating a list of symbols.
- Modified `SymbolsService` to implement the new validation logic.
- Restructured cache settings in `appsettings.json` to include `CacheSymbols` and `CryptoCache`.
- Introduced a new `CryptoService` class for managing caching and CoinMarketCap service interactions.

--- a/CryptoRates.UI.API/appsettings.json
+++ b/CryptoRates.UI.API/appsettings.json
@@ -10,8 +10,12 @@
     "BaseUrl": "https://pro-api.coinmarketcap.com",
     "LatestListingsEndpoint": "/v1/cryptocurrency/listings/latest"
   },
-  "Cache": {
+  "CacheSymbols": {
     "CryptoSymbolsKey": "crypto-symbols",
     "ExpirationMinutes": 1440
+  },
+  "CryptoCache": {
+    "CryptoCacheKey": "crypto-cache",
+    "ExpirationMinutes": 1
   }
 }
