Enhance API with new services and error handling
Updated project to include `ErrorOr` and `Swashbuckle.AspNetCore` for improved error handling and API documentation. Replaced `SymbolDto` with `CryptoSymbol` and modified endpoints to reflect new API structure.

Refactored `CoinMarketCapService` to return `ErrorOr<List<CryptoSymbol>>` and added `GetLatestQuotesAsync` method. Updated interfaces and service registrations in `ServiceExtensions` to include new services for exchange rates and quotes.

Introduced new data models: `ExchangeRate`, `Price`, `QuoteDto`, and `QuoteResult`. Added `QuotesEndpoints` for handling quote requests and implemented `ExchangeRatesService` for fetching exchange rates with error handling and caching.

Removed `CryptoService` and updated configuration settings in `appsettings.json` to support new API endpoints. Overall, these changes significantly enhance the application's functionality and structure.

--- a/CryptoRates.UI.API/appsettings.json
+++ b/CryptoRates.UI.API/appsettings.json
@@ -8,14 +8,26 @@
   "AllowedHosts": "*",
   "CoinMarketCap": {
     "BaseUrl": "https://pro-api.coinmarketcap.com",
-    "LatestListingsEndpoint": "/v1/cryptocurrency/listings/latest"
+    "LatestListingsEndpoint": "/v1/cryptocurrency/listings/latest",
+    "LatestQuotesEndpoint": "/v2/cryptocurrency/quotes/latest",
+    "BaseQuotesCurrency": "EUR"
+  },
+  "ExchangeRates": {
+    "BaseUrl": "https://api.exchangeratesapi.io",
+    "LatestExchangeEndpoint": "/v1/latest",
+    "BaseCurrency": "EUR",
+    "ExchangeCurrencies": "USD,BRL,GBP,AUD"
   },
   "CacheSymbols": {
-    "CryptoSymbolsKey": "crypto-symbols",
+    "Key": "crypto-symbols",
     "ExpirationMinutes": 1440
   },
+  "CacheRates": {
+    "Key": "exchange-rates",
+    "ExpirationMinutes": 1
+  },
   "CryptoCache": {
-    "CryptoCacheKey": "crypto-cache",
+    "Key": "crypto-cache",
     "ExpirationMinutes": 1
   }
 }
