--- a/CryptoRates.UI.API/CryptoRates.UI.API.csproj
+++ b/CryptoRates.UI.API/CryptoRates.UI.API.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ErrorOr" Version="2.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
   </ItemGroup>
 
